scripts: Added configure script to chose a Makefile depending of the OS.

--- a/Makefile-macOS
+++ b/Makefile-macOS
@@ -6,18 +6,18 @@ $(BINARY) : $(FILES)
 	cargo build --release
 
 install : $(BINARY)
-	chown root:root $(BINARY)
+	chown root:wheel $(BINARY)
 	cp $(BINARY) /usr/local/bin/
 	chmod 4711 /usr/local/bin/rad
 	touch $(CONF)
-	chown root:root $(CONF)
+	chown root:wheel $(CONF)
 	chmod 600 $(CONF)
-	cp rad.1 /usr/share/man/man1/
-	cp rad.conf.5 /usr/share/man/man5/
+	cp rad.1 /usr/local/share/man/man1/
+	cp rad.conf.5 /usr/local/share/man/man5/
 	cp rad.pam /etc/pam.d/rad
 
 uninstall :
 	rm /usr/local/bin/rad
-	rm /usr/share/man/man1/rad.1
-	rm /usr/share/man/man5/rad.conf.5
+	rm /usr/local/share/man/man1/rad.1
+	rm /usr/local/share/man/man5/rad.conf.5
 	rm /etc/pam.d/rad
